--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -105,6 +105,10 @@ repos:
     hooks:
       - id: isort
         args: [--profile, black]
+  - repo: https://github.com/pre-commit/mirrors-pylint
+    rev: v3.0.0a5
+    hooks:
+      - id: pylint
   - repo: https://github.com/pre-commit/mirrors-mypy
     rev: v1.7.1
     hooks:
