--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -18,7 +18,7 @@ jobs:
         if: false
         with:
           cache: pip
-          python-version: "3.11"
+          python-version: "3.12.1"
       - run: python -m pip install pre-commit
       - uses: actions/cache/restore@v3
         with:
@@ -28,6 +28,7 @@ jobs:
       - name: Run pre-commit hooks
         run: |
           set -o pipefail
+          pre-commit gc
           pre-commit run --show-diff-on-failure --color=always --all-files | tee ${RAW_LOG}
       - name: Convert Raw Log to CheckStyle format
         if: ${{ failure() }}
