--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -99,7 +99,7 @@ repos:
     rev: 6.1.0
     hooks:
       - id: flake8
-        #args: [--ignore, 'F821,W503']
+        args: [--ignore, 'E203']
         additional_dependencies:
           - flake8-bugbear
           - flake8-comprehensions
