--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -30,7 +30,7 @@ jobs:
           set -o pipefail
           pre-commit gc
           pre-commit run --show-diff-on-failure --color=always --all-files | tee ${RAW_LOG}
-      - name: Convert Raw Log to CheckStyle format
+      - name: Convert Raw Log to CheckStyle format (launch script)
         if: ${{ failure() }}
         run: |
           python ${LOG_TO_CS} ${RAW_LOG} ${CS_XML}
