--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,15 +8,15 @@ repos:
     hooks:
       - id: mdformat
         name: Format Markdown
-        entry: mdformat  # Executable to run, with fixed options
+        entry: mdformat
         language: python
         types: [markdown]
         args: [--wrap, '75', --number]
         additional_dependencies:
           - mdformat-toc
           - mdformat-beautysh
-          # -mdformat-shfmt
-          # -mdformat-tables
+          # - mdformat-shfmt
+          # - mdformat-tables
           - mdformat-config
           - mdformat-black
           - mdformat-web
@@ -118,6 +118,7 @@ repos:
       - id: pylint
         additional_dependencies:
           - regex
+          - requests
   - repo: https://github.com/pre-commit/mirrors-mypy
     rev: v1.7.1
     hooks:
@@ -130,4 +131,4 @@ repos:
           - --show-error-codes
           - --show-error-context
           - --disable-error-code=name-defined
-        additional_dependencies: [tkcalendar>=1.5.0, types-pytz, regex]
+        additional_dependencies: [tkcalendar>=1.5.0, types-pytz, regex,types-requests]
