--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -75,7 +75,7 @@ repos:
     hooks:
       - id: python-bandit-vulnerability-check
         #args: [--skip, 'B101,B311', --recursive, .]
-        args: [--recursive, .]
+        args: [--recursive, ., --skip, 'B101,B404,B603']
   - repo: https://github.com/fsouza/autoflake8
     rev: v0.4.1
     hooks:
@@ -86,15 +86,6 @@ repos:
     hooks:
       - id: black
         args: [--safe, --quiet, -l 79]
-  - repo: https://github.com/Lucas-C/pre-commit-hooks-bandit
-    rev: v1.0.6
-    hooks:
-      - id: python-bandit-vulnerability-check
-        #args:
-        #  - --skip
-        #  - B101,B105,B311,B324,B404,B602,B603,B605,B607,B108
-        #  - --recursive
-        #  - .
   - repo: https://github.com/PyCQA/flake8
     rev: 6.1.0
     hooks:
@@ -119,6 +110,7 @@ repos:
         additional_dependencies:
           - regex
           - requests
+          - pytest
   - repo: https://github.com/pre-commit/mirrors-mypy
     rev: v1.7.1
     hooks:
@@ -132,3 +124,13 @@ repos:
           - --show-error-context
           - --disable-error-code=name-defined
         additional_dependencies: [tkcalendar>=1.5.0, types-pytz, regex,types-requests]
+  - repo: local
+    hooks:
+      - id: pytest
+        name: pytest
+        entry: pytest
+        language: python
+        pass_filenames: false
+        always_run: true
+        additional_dependencies:
+          - pytest
