--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -123,7 +123,7 @@ repos:
           - --show-error-codes
           - --show-error-context
           - --disable-error-code=name-defined
-        additional_dependencies: [tkcalendar>=1.5.0, types-pytz, regex,types-requests]
+        additional_dependencies: [tkcalendar>=1.5.0, types-pytz, types-regex,types-requests]
   - repo: local
     hooks:
       - id: pytest
@@ -134,3 +134,4 @@ repos:
         always_run: true
         additional_dependencies:
           - pytest
+          - regex
