--- a/action.yml
+++ b/action.yml
@@ -25,7 +25,7 @@ runs:
   using: composite
   steps:
     - name: Analyse logfile
-      shell: runner.os == 'Windows' && 'bash' || 'sh'
+      shell: ${{ runner.os == 'Windows' && 'bash' || 'sh' }}
       run: |
         echo ::group::Analyze log file
         python -m pip install regex
