--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -10,6 +10,7 @@ jobs:
       LOG_TO_CS: ./logToCs.py
       RAW_LOG: pre-commit.log
       CS_XML: pre-commit.xml
+      SKIP: no-commit-to-branch
     steps:
       - run: sudo apt-get update && sudo apt-get install cppcheck
         if: false
@@ -36,7 +37,7 @@ jobs:
         run: |
           python ${LOG_TO_CS} ${RAW_LOG} ${CS_XML}
       - name: Convert Raw Log to Checkstyle format (launch action)
-        uses: mdeweerd/.3.2
+        uses: mdeweerd/logToCheckStyle@v2024.3.2
         if: ${{ failure() }}
         with:
           in: ${{ env.RAW_LOG }}
