--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -37,7 +37,7 @@ jobs:
         run: |
           python ${LOG_TO_CS} ${RAW_LOG} ${CS_XML}
       - name: Convert Raw Log to Checkstyle format (launch action)
-        uses: mdeweerd/logToCheckStyle@v2024.3.2
+        uses: mdeweerd/logToCheckStyle@2024.3.2
         if: ${{ failure() }}
         with:
           in: ${{ env.RAW_LOG }}
